# DevHealth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  Makefile  README.md
src/: cli.rs  lib.rs  main.rs
src/scanner/: analytics.rs  deps.rs  git.rs  mod.rs  system.rs
src/utils/: display.rs  fs.rs  mod.rs
tests/: integration_tests.rs
