[package]
name = "devhealth"
version = "0.1.0"
edition = "2021"
authors = ["Art-Jashari <your-email@example.com>"]
description = "A CLI tool for monitoring your development environment health"
license = "MIT"

[[bin]]
name = "devhealth"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }