[package]
name = "devhealth"
version = "0.2.0"
edition = "2021"
authors = ["Art-Jashari <artjashari300@gmail.com>"]
description = "A CLI tool for monitoring your development environment health"
license = "MIT"
repository = "https://github.com/Art-Jashari/DevHealth"
homepage = "https://github.com/Art-Jashari/DevHealth"
documentation = "https://docs.rs/devhealth"
readme = "README.md"
keywords = ["cli", "development", "health", "git", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
# Features to enable when building docs
all-features = true
# Build docs for all target platforms
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]

[[bin]]
name = "devhealth"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
thiserror = "1.0"
colored = "2.0"

[dev-dependencies]
tempfile = "3.0"
